--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="col-sm-3 col-xs-6">
                 <a href="tools.html">
-                    <img class="img-responsive portfolio-item" src="img/tools1.jpg." alt="">
+                    <img class="img-responsive portfolio-item" src="img/tools1.jpg" alt="">
                 </a>
             </div>
 
